# odin-graph

./: README.md  pyproject.toml
src/odin_graph/: adapter.py  dataset.py
test/config/: example_config.json  graph.cfg
